--- a/app/front/css/style.css
+++ b/app/front/css/style.css
@@ -4,6 +4,7 @@
 	float:none;
 	margin:0 auto;
 	background:#fff;
+	font-family:Cardo;
 }
 	header{
 		width:100%;
@@ -36,7 +37,7 @@
 				.sol li{
 					width:auto;
 					height:54px;
-					font:24px Rockwell;
+					font-size:24px;
 					font-weight:bold;
 					margin-left:15px;
 					line-height:54px;
@@ -76,7 +77,7 @@
 				.sag li{
 					width:auto;
 					height:54px;
-					font:24px Rockwell;
+					font-size:24px;
 					font-weight:bold;
 					margin-right:15px;
 					line-height:54px;
@@ -90,3 +91,291 @@
 				.sag a.selected{
 					color:#3eb3a5;
 				}
+		.hosgeldiniz{
+			width:100%;
+			padding-top:96px;
+			padding-bottom:96px;
+			text-align:center;
+			font-size:18px;
+			color:#a0a0a0;
+			line-height:18px;
+			letter-spacing:1px;
+		}
+			.ciftCizgi{
+				width:100px;
+				float:none;
+				height:5px;
+				margin:0 auto;
+				border-bottom:3px solid;
+				border-top:3px solid;
+				margin-top:10px;
+			}
+	section{
+		width:100%;
+		height:auto;
+	}
+		.anaSayfaPosts{
+			width:940px;
+			height:auto;
+			float:none;
+			margin:0 auto;
+		}
+			.anaSayfaPosts li{
+				width:100%;
+				height:auto;
+				height:300px;
+				margin-top:35px;
+				border-bottom:1px dashed #e1e1e1;
+				display:block;
+			}
+				.anaSayfaPosts li .solKisim{
+					width:123px;
+					height:100%;
+					float:left;
+				}
+					.tarih{
+						width:109px;
+						padding-top:39.5px;
+						padding-bottom:39.5px;
+						line-height:30px;
+						text-align:center;
+						font-size:30px;
+						font-weight:bold;
+						color:#3eb3a5;
+						border:7px solid #ebebeb;
+						border-radius:100%;
+					}
+				.sagKisim{
+					width:817px;
+					height:100%;
+				}
+					.tags{
+						padding-left:17px;
+						width:800px;
+						height:auto;
+						margin-top:20px;
+						margin-bottom:20px;
+					}
+						.tags h4{
+							font-size:18px;
+							font-weight:bold;
+						}
+						.tags span{
+							font-size:16px;
+							margin-left:20px;
+							color:#3eb3a5;
+						}
+							.tags span a{
+								color:#3eb3a5;
+							}
+							.tags span a:hover{
+								color:#0fc5af;
+							}
+					.bilgiler{
+						font-size:14px;
+						height:23px;
+						padding-top:37px;
+						padding-left:17px;
+						width:800px;
+						border-bottom:3px solid #ebebeb;
+					}
+						.bilgiler a.kategorisi{
+							color:#3eb3a5;
+							float:left;
+						}
+						.bilgiler a.kategorisi:hover{
+							color:#0fc5af;
+						}
+						.kalp{
+							margin-left:25px;
+						}
+						.begeniSayi{
+							color:#c0c0c0;
+							margin-left:7px;
+						}
+						.yorum{
+							margin-left:30px;
+						}
+					.kisa{
+						width:800px;
+						height:153px;
+						padding-left:17px;
+					}
+						h2.baslik{
+							font-size:30px;
+							font-weight:bold;
+							line-height:70px;
+						}
+					.kisa p{
+						font-size:16px;
+						line-height:20.75px;
+						letter-spacing:1px;
+					}
+				.devaminiOku{
+					margin-top:25px;
+					padding-left:17px;
+				}
+					.devaminiOku a{
+						font-size:16px;
+						color:#3eb3a5;
+						font-weight:bold;
+						border-bottom:1px solid #e1e1e1;
+					}
+					.devaminiOku a:hover{
+						border-bottom:1px solid #ccc;
+					}
+		.dahaFazlaYukle{
+			margin-top:15px;
+			float:left;
+			width:100%;
+		}
+			.dahaFazlaYukle a{
+				display:block;
+				width:200px;
+				font-size:18px;
+				color:#fff;
+				background:#3eb3a5;
+				margin:0 auto;
+				text-align:center;
+				padding:10px;
+				margin-bottom:50px;
+				float:none;
+			}
+			.dahaFazlaYukle a:hover{
+				background:#0fc5af;
+			}
+		.detayPost{
+			margin-top:60px;
+			display:block;
+			min-height:350px;
+			max-height:1500px;
+			position:relative;
+		}
+			.detayPost li{
+				min-height:350px;
+				max-height:1500px;
+				overflow:auto;
+				display:block;
+			}
+			.detayPost li .sagKisim .kisa{
+				height:auto;
+			}
+		.yorumSayi{
+			width:940px;
+			float:none;
+			margin:0 auto;
+			font-size:24px;
+			font-weight:bold;
+			padding-top:80px;
+			padding-bottom:40px;
+			border-bottom:1px dotted #E1E1E1;
+		}
+			.yorumYap{
+				width:100%;
+				height:auto;
+				padding-bottom:30px;
+				border-bottom:1px dotted #E1E1E1;
+			}
+			.yorumYap h4{
+				text-align:center;
+				float:none;
+				margin:0 auto;
+				font-size:24px;
+				font-weight:bold;
+				padding-top:40px;
+				padding-bottom:40px;
+				display:block;
+			}
+			.yorumYap form{
+				width:400px;
+				height:auto;
+				float:none;
+				margin:0 auto;
+				display:block;
+			}
+				.yorumYap form input[type="text"]{
+					width:385px;
+					height:50px;
+					font-size:16px;
+					padding-left:15px;
+					border:0;
+					color:#888b8b;
+					background:#ebebeb;
+					border-radius:5px;
+					margin-top:10px;
+				}
+				.yorumYap form textarea{
+					width:385px;
+					height:200px;
+					font-size:16px;
+					padding-left:15px;
+					border:0;
+					color:#888b8b;
+					background:#ebebeb;
+					border-radius:5px;
+					margin-top:10px;
+					font-family:Cardo;
+					padding-top:15px;
+				}
+				.yorumYap input[type="submit"]{
+					width:400px;
+					height:50px;
+					line-height:50px;
+					font-size:16px;
+					background:#3eb3a5;
+					border-radius:5px;
+					border:0;
+					margin-top:10px;
+					font-weight:bold;
+					text-align:center;
+					color:#fff;
+					cursor:pointer;
+				}
+				.yorumYap input[type="submit"]:hover{
+					background:#0fc5af;
+				}
+		.yorumlar{
+			width:745px;
+			margin-top:30px;
+			margin-left:277.5px;
+		}
+			.yorumTek{
+				width:745px;
+				height:300px;
+				margin-bottom:20px;
+				border-bottom:1px dotted #ebebeb;
+			}
+				.yorumSol{
+					width:125px;
+					height:125px;
+				}
+					.yorumResim{
+						width:125px;
+						height:125px;
+						background:#ebebeb;
+						border-radius:100%;
+					}
+				.yorumSag{
+					margin-left:10px;
+					width:605px;
+					height:100px;
+				}
+					h3.yorumYapan{
+						width:100%;
+						height:24px;
+						font-size:24px;
+						font-weight:bold;
+						margin-top:50px;
+						color:#3eb3a5;
+					}
+					p.yorumYorum{
+						width:585px;
+						height:auto;
+						padding:10px;
+						margin-top:25px;
+						background:#ebebeb;
+						border-radius:10px;
+						font-size:16px;
+						color:#565656;
+						letter-spacing:1px;
+					}
