--- a/app/front/css/style.css
+++ b/app/front/css/style.css
@@ -214,6 +214,8 @@
 						font-size:16px;
 						line-height:20.75px;
 						letter-spacing:1px;
+						width:800px;
+						display:block;
 					}
 				.devaminiOku{
 					margin-top:25px;
